--- a/analysis/Restaurant-OpeningClosing.ipynb
+++ b/analysis/Restaurant-OpeningClosing.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0c29f61f",
+   "metadata": {},
+   "source": [
+    "# 5년 간 음식점 개업 수, 폐업 수 추출 "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "ea372e78",
    "metadata": {},
    "outputs": [],
@@ -12,17 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "664ead93",
    "metadata": {},
    "outputs": [],
    "source": [
-    "food_health = pd.read_csv('./food_health.csv', encoding='cp949')"
+    "food_health = pd.read_csv('../data/food_health.csv', encoding='cp949')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "d55a3777",
    "metadata": {},
    "outputs": [
@@ -94,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "b467c447",
    "metadata": {},
    "outputs": [
@@ -115,7 +123,7 @@
        "Name: 인허가일자, Length: 288535, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "1792ae07",
    "metadata": {},
    "outputs": [],
@@ -145,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "f1739e0d",
    "metadata": {},
    "outputs": [
@@ -155,7 +163,7 @@
        "20210630"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "19982f44",
    "metadata": {},
    "outputs": [],
@@ -184,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "81453864",
    "metadata": {},
    "outputs": [
@@ -545,7 +553,7 @@
        "[65489 rows x 48 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "e8ed9736",
    "metadata": {},
    "outputs": [
@@ -614,7 +622,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "d73a7e1d",
    "metadata": {},
    "outputs": [
@@ -1028,7 +1036,7 @@
        "[65489 rows x 48 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1039,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "7a3dee50",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1069,7 @@
        "Freq: M, Name: 상세영업상태명, Length: 66, dtype: int64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "3688eed3",
    "metadata": {
     "scrolled": true
@@ -1102,7 +1110,7 @@
        "              dtype='datetime64[ns]', name='인허가일자', freq='M')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "51cc4265",
    "metadata": {},
    "outputs": [],
@@ -1123,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "da49a550",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1141,7 @@
        "<AxesSubplot:xlabel='opening'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1165,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "6e9fb27b",
    "metadata": {},
    "outputs": [],
@@ -1175,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "dc813f01",
    "metadata": {},
    "outputs": [
@@ -1536,7 +1544,7 @@
        "[29590 rows x 48 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1547,7 +1555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "ad763852",
    "metadata": {},
    "outputs": [
@@ -1605,7 +1613,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1617,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "dc401b8c",
    "metadata": {},
    "outputs": [
@@ -1639,7 +1647,7 @@
        "Freq: M, Name: 상세영업상태명, Length: 66, dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1651,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "0d9022b1",
    "metadata": {},
    "outputs": [],
@@ -1661,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "id": "c724160b",
    "metadata": {},
    "outputs": [
@@ -1688,7 +1696,7 @@
        "              dtype='datetime64[ns]', name='closing', freq='M')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1699,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "755243d0",
    "metadata": {},
    "outputs": [
@@ -1709,7 +1717,7 @@
        "<AxesSubplot:xlabel='closing'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
