--- a/analysis/Restaurant-OpeningClosing.ipynb
+++ b/analysis/Restaurant-OpeningClosing.ipynb
@@ -1625,6 +1625,251 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "id": "78d7c16c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>번호</th>\n",
+       "      <th>개방서비스명</th>\n",
+       "      <th>개방서비스id</th>\n",
+       "      <th>개방자치단체코드</th>\n",
+       "      <th>관리번호</th>\n",
+       "      <th>인허가일자</th>\n",
+       "      <th>인허가취소일자</th>\n",
+       "      <th>영업상태구분코드</th>\n",
+       "      <th>영업상태명</th>\n",
+       "      <th>상세영업상태코드</th>\n",
+       "      <th>...</th>\n",
+       "      <th>공장생산직종업원수</th>\n",
+       "      <th>건물소유구분명</th>\n",
+       "      <th>보증액</th>\n",
+       "      <th>월세액</th>\n",
+       "      <th>다중이용업소여부</th>\n",
+       "      <th>시설총규모</th>\n",
+       "      <th>전통업소지정번호</th>\n",
+       "      <th>전통업소주된음식</th>\n",
+       "      <th>홈페이지</th>\n",
+       "      <th>Unnamed: 47</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>폐업일자</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-04-21</th>\n",
+       "      <td>98561</td>\n",
+       "      <td>건강기능식품일반판매업</td>\n",
+       "      <td>07_22_03_P</td>\n",
+       "      <td>3590000</td>\n",
+       "      <td>3590000-134-2017-00004</td>\n",
+       "      <td>20170117</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>폐업</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-05-17</th>\n",
+       "      <td>98562</td>\n",
+       "      <td>건강기능식품일반판매업</td>\n",
+       "      <td>07_22_03_P</td>\n",
+       "      <td>3590000</td>\n",
+       "      <td>3590000-134-2017-00006</td>\n",
+       "      <td>20170222</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>폐업</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-06-25</th>\n",
+       "      <td>98563</td>\n",
+       "      <td>건강기능식품일반판매업</td>\n",
+       "      <td>07_22_03_P</td>\n",
+       "      <td>3590000</td>\n",
+       "      <td>3590000-134-2017-00008</td>\n",
+       "      <td>20170314</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>폐업</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>자가</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-09</th>\n",
+       "      <td>98564</td>\n",
+       "      <td>건강기능식품일반판매업</td>\n",
+       "      <td>07_22_03_P</td>\n",
+       "      <td>3590000</td>\n",
+       "      <td>3590000-134-2017-00009</td>\n",
+       "      <td>20170323</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>폐업</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>자가</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-07-15</th>\n",
+       "      <td>98565</td>\n",
+       "      <td>건강기능식품일반판매업</td>\n",
+       "      <td>07_22_03_P</td>\n",
+       "      <td>3590000</td>\n",
+       "      <td>3590000-134-2017-00010</td>\n",
+       "      <td>20170327</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "      <td>폐업</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 48 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               번호       개방서비스명     개방서비스id  개방자치단체코드                    관리번호  \\\n",
+       "폐업일자                                                                           \n",
+       "2021-04-21  98561  건강기능식품일반판매업  07_22_03_P   3590000  3590000-134-2017-00004   \n",
+       "2018-05-17  98562  건강기능식품일반판매업  07_22_03_P   3590000  3590000-134-2017-00006   \n",
+       "2018-06-25  98563  건강기능식품일반판매업  07_22_03_P   3590000  3590000-134-2017-00008   \n",
+       "2019-01-09  98564  건강기능식품일반판매업  07_22_03_P   3590000  3590000-134-2017-00009   \n",
+       "2019-07-15  98565  건강기능식품일반판매업  07_22_03_P   3590000  3590000-134-2017-00010   \n",
+       "\n",
+       "               인허가일자  인허가취소일자  영업상태구분코드 영업상태명  상세영업상태코드  ... 공장생산직종업원수  \\\n",
+       "폐업일자                                                     ...             \n",
+       "2021-04-21  20170117      NaN         3    폐업         2  ...       NaN   \n",
+       "2018-05-17  20170222      NaN         3    폐업         2  ...       NaN   \n",
+       "2018-06-25  20170314      NaN         3    폐업         2  ...       NaN   \n",
+       "2019-01-09  20170323      NaN         3    폐업         2  ...       NaN   \n",
+       "2019-07-15  20170327      NaN         3    폐업         2  ...       NaN   \n",
+       "\n",
+       "            건물소유구분명  보증액  월세액  다중이용업소여부 시설총규모 전통업소지정번호  전통업소주된음식 홈페이지  \\\n",
+       "폐업일자                                                                    \n",
+       "2021-04-21      NaN  NaN  NaN         N   0.0      NaN       NaN  NaN   \n",
+       "2018-05-17      NaN  NaN  NaN         N   0.0      NaN       NaN  NaN   \n",
+       "2018-06-25       자가  NaN  NaN         N   0.0      NaN       NaN  NaN   \n",
+       "2019-01-09       자가  NaN  NaN         N   0.0      NaN       NaN  NaN   \n",
+       "2019-07-15      NaN  NaN  NaN         N   0.0      NaN       NaN  NaN   \n",
+       "\n",
+       "           Unnamed: 47  \n",
+       "폐업일자                    \n",
+       "2021-04-21         NaN  \n",
+       "2018-05-17         NaN  \n",
+       "2018-06-25         NaN  \n",
+       "2019-01-09         NaN  \n",
+       "2019-07-15         NaN  \n",
+       "\n",
+       "[5 rows x 48 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "food_health_closing.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "id": "dc401b8c",
    "metadata": {},
@@ -1740,8 +1985,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "a4d3158a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2016-01-31 00:00:00', freq='M')"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monthly_closing.index.tolist()[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "829ff247",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['01/31/16',\n",
+       " '02/29/16',\n",
+       " '03/31/16',\n",
+       " '04/30/16',\n",
+       " '05/31/16',\n",
+       " '06/30/16',\n",
+       " '07/31/16',\n",
+       " '08/31/16',\n",
+       " '09/30/16',\n",
+       " '10/31/16',\n",
+       " '11/30/16',\n",
+       " '12/31/16',\n",
+       " '01/31/17',\n",
+       " '02/28/17',\n",
+       " '03/31/17',\n",
+       " '04/30/17',\n",
+       " '05/31/17',\n",
+       " '06/30/17',\n",
+       " '07/31/17',\n",
+       " '08/31/17',\n",
+       " '09/30/17',\n",
+       " '10/31/17',\n",
+       " '11/30/17',\n",
+       " '12/31/17',\n",
+       " '01/31/18',\n",
+       " '02/28/18',\n",
+       " '03/31/18',\n",
+       " '04/30/18',\n",
+       " '05/31/18',\n",
+       " '06/30/18',\n",
+       " '07/31/18',\n",
+       " '08/31/18',\n",
+       " '09/30/18',\n",
+       " '10/31/18',\n",
+       " '11/30/18',\n",
+       " '12/31/18',\n",
+       " '01/31/19',\n",
+       " '02/28/19',\n",
+       " '03/31/19',\n",
+       " '04/30/19',\n",
+       " '05/31/19',\n",
+       " '06/30/19',\n",
+       " '07/31/19',\n",
+       " '08/31/19',\n",
+       " '09/30/19',\n",
+       " '10/31/19',\n",
+       " '11/30/19',\n",
+       " '12/31/19',\n",
+       " '01/31/20',\n",
+       " '02/29/20',\n",
+       " '03/31/20',\n",
+       " '04/30/20',\n",
+       " '05/31/20',\n",
+       " '06/30/20',\n",
+       " '07/31/20',\n",
+       " '08/31/20',\n",
+       " '09/30/20',\n",
+       " '10/31/20',\n",
+       " '11/30/20',\n",
+       " '12/31/20',\n",
+       " '01/31/21',\n",
+       " '02/28/21',\n",
+       " '03/31/21',\n",
+       " '04/30/21',\n",
+       " '05/31/21',\n",
+       " '06/30/21']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "monthly_closing.index.strftime('%m/%d/%y').tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "593fd0ef",
    "metadata": {},
    "outputs": [],
    "source": []
